components/PageLayout/style.css
#mainContentWrap {
    width: 100%;
    height: 100%;
    background: #f2f2f2;
    /*border: 1px solid #D7D6D6;*/
    border-top: none;
	border-bottom: none !important;
}

.resizibleCell {
    border: none !important;
    position: relative;
}

#mainContentWrap .profileInfoWrap {
    border-left: 1px solid #D7D6D6;
}

#mainContentWrap .treeStructureWrap {
    border-right: 1px solid #D7D6D6;
    height: 100%;
}
#mainContentWrap .treeStructureWrap .selectWrap {
    margin: 25px 0;
}

.buttonsWrap {
    overflow: hidden;
    margin-left: 20px; /* Margin between buttons and the heading */
}
.buttonsContainer {
    display: flex;
    align-items: center;
    flex-direction: row;
}
.buttonWrap {
    float: left;
    margin-right: 20px;
    white-space: nowrap;
}
.buttonWrap:last-child {
    margin-right: 0;
}

.headerWrapper {
    background-color: #ffffff;
}

.heading {
    position: relative;
}

.heading .breadcrumbsWrap {
    font-size: 12px;
    position: absolute;
    top: -15px;
    left: 0;
    display: none;
    font-weight: normal;
    color: #595959;
}

.h100pr {
    height: 100%;
}

.w100pr {
    width: 100%;
}

